--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-community/checkbox": "^0.5.9",
     "@react-navigation/drawer": "^6.3.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
@@ -17,13 +19,18 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-bootsplash": "^4.1.1",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "2.1.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "^2.4.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-vector-icons": "^9.0.0",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -31,8 +38,10 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.15",
+    "@types/react-native-onboarding-swiper": "^1.1.4",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "babel-jest": "^26.6.3",
